--- a/website/parentsguide.html
+++ b/website/parentsguide.html
@@ -65,7 +65,13 @@
                     <a class="page-scroll" href="index.html#video">Video</a>
                 </li>
                 <li>
+                    <a class="page-scroll selected" href="parentsguide.html">Parent's Guide</a>
+                </li>
+                <li>
                     <a class="page-scroll" href="index.html#games">Games</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="familysearch.html">FamilySearch</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="index.html#about">About Us</a>
