--- a/website/privacy.html
+++ b/website/privacy.html
@@ -61,6 +61,9 @@
                     <a class="page-scroll" href="index.html#games">Games</a>
                 </li>
                 <li>
+                    <a class="page-scroll" href="familysearch.html">FamilySearch</a>
+                </li>
+                <li>
                     <a class="page-scroll" href="index.html#about">About Us</a>
                 </li>
             </ul>
