First games page added to website

--- a/website/familysearch.html
+++ b/website/familysearch.html
@@ -96,7 +96,7 @@
             <p>
                 Little Family Tree downloads data from your FamilySearch Family Tree to use in its
                 <a href="index.html#games">games</a>.  It will use the people, places, and dates
-                from your family tree as well and the photos that you have attached.  Little Family
+                from your family tree as well as the photos that you have attached.  Little Family
                 Tree is a read-only FamilySearch application and does not make any attempts to
                 update your FamilySearch Family Tree.
             </p>
@@ -121,7 +121,7 @@
                 encrypted and secure.
             </p>
             <p>
-                After successfully logging in, Little Family Tree will begin download data and photos
+                After successfully logging in, Little Family Tree will begin downloading data and photos
                 for you and your close relatives.
             </p>
         </div>
@@ -135,7 +135,7 @@
             <p>
                 Little Family Tree automatically synchronizes with your FamilySearch Family Tree
                 in the background while your child plays.  By default it will synchronize if you
-                are on a WiFi connection and will check for updates of peolpe you access in the game
+                are on a WiFi connection and will check for updates of people you access in the game
                 once every hour.
             </p>
             <p>
@@ -163,7 +163,8 @@
                 change or affect that person on the FamilySearch Family Tree.
             </p>
             <p>
-                Tapping on the view button <img src="view_button.png" width="35" /> will open up that  person's FamilySearch profile in your
+                Tapping on the view button <img src="view_button.png" width="35" /> will open up
+                that  person's FamilySearch profile in your
                 default web browser where you can make any changes.
             </p>
         </div>
