Website updates share watercolor image

--- a/website/bubbles.html
+++ b/website/bubbles.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Little Family Tree - Heritage Dress Up Game</title>
+    <title>Little Family Tree - Relationship Bubbles Game</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -81,78 +81,37 @@
 <div class="content-start container">
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2 text-center">
-            <h2 class="section-heading"><img src="game_icons/house_adult_wardrobe8.png" height="90" />&nbsp; Heritage Dress Up Game</h2>
+            <h2 class="section-heading"><img src="game_icons/bubbles3.png" height="60" />&nbsp; Relationship Bubbles Game</h2>
             <hr class="primary">
             <p>&nbsp;</p>
         </div>
     </div>
     <div class="row">
         <div class="col-sm-6 col-lg-offset-1">
-            <h3>Heritage Calculator</h3>
             <p>
-                This game begins by scanning your family tree and calculating your heritage.  Your
-                heritage is calculated using the birth places of your ancestors in the tree.  If
-                you were born in England and your father was born in France and your Mother was
-                born in Germany, then your heritage would be calculated as 50% France and 50%
-                Germany.
+                This game is designed to help children solidify parent-child relationships outside
+                of their immediate family.  In the background is a simple family tree structure with spots for a
+                father, mother, and child.  Bubbles randomly float around the screen.  Three of the
+                bubbles are carrying the pictures of a father, mother, and child.  Tap on the bubbles
+                to pop them.
             </p>
             <p>
-                If instead of being born in France, your father was also born in England, but his
-                parents were born in France and Portugal.  Then your heritage would be calculated
-                as 50% German from your mother, 25% France from your paternal grandfather and 25%
-                Portugal from your paternal grandmother.
+                The game will prompt you to find the father, mother, or child in the family by
+                popping the correct bubble.  If you pop the correct bubble, then the picture of
+                that person will move to its correct spot in the family structure.  If you try to
+                pop an incorrect bubble, it will shake and a buzzing sound will play.  When you
+                have correctly popped the people bubbles, the game will be cleared and a new family
+                from your tree will be chosen.  In general, the game will start with your immediate
+                family and then move up the tree to parents, grand parents, etc.  The game will
+                continue until you choose to end.
             </p>
             <p>
-                If multiple relatives were born in the same place, then their percentages are added
-                together.  You can click on the chart to see the relative who contributed the most
-                to that heritage.
-            </p>
-            <p>
-                You can also use the <em>Nationality</em> attribute on a person in your tree
-                to change the calculations.  The <em>Nationality</em> attribute is useful for
-                identifying sub-cultures such as Native American tribes where the birth place is
-                not an accurate cultural identifier.
-            </p>
-            <p>
-                Little Family Tree only uses the local data that it has already downloaded to
-                calculate your heritage.  It will become more accurate as more data is automatically
-                synchronized.  You can help this along by going to the <a href="tree.html">Tree, I Spy</a>
-                game and expanding your tree up to older relatives.
-            </p>
-            <p>
-                The heritage calculator is limited to the data in your online family tree.  The more accurate
-                and complete your family tree, the more accurate the heritage calculator will be.
+                For fun, you may add more empty bubbles to the game by squirting soap and adding
+                more water.
             </p>
         </div>
         <div class="col-sm-4 text-center">
-            <a href="Screenshot_heritage_calc.png"><img class="guide-image" src="Screenshot_heritage_calc.png" border="0"/></a>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-6 col-lg-offset-1">
-            <h3>Dress Up</h3>
-            <p>
-                After selecting a place from the chart, you can click on the <em>Play!</em> button
-                or on the dress up icon to play a dress up game with the traditional clothes of
-                the heritage you selected.
-            </p>
-            <p>
-                Drag the clothing onto the doll.  The red outline shows you where the clothes
-                should be placed as they are being moved.  When all of the clothes are in place
-                you may choose to dress up the doll using clothing from a different heritage.
-            </p>
-            <p>
-                Clothing for other places and cultures are regularly being added to the game.  If
-                you have a request for a particular culture, please contact us from the home page
-                and we will try to give it a higher priority for a future update of the game.
-            </p>
-            <p>
-                Tap the home button <img src="home.png" height="30" /> at any time to return to the
-                Heritage Calculator chart.
-            </p>
-        </div>
-        <div class="col-sm-4 text-center">
-            <a href="Screenshot_heritage_calc.png"><img class="guide-image" src="Screenshot_dress_up.png" border="0"/></a>
+            <a href="Screenshot_bubbles.png"><img class="guide-image" src="Screenshot_bubbles.png" border="0"/></a>
         </div>
     </div>
     <div class="row">
