--- a/website/familysearch.html
+++ b/website/familysearch.html
@@ -87,8 +87,10 @@
         <div class="col-lg-8 col-lg-offset-2 text-center">
             <h2 class="section-heading">FamilySearch Integration</h2>
             <hr class="primary">
-            <p>&nbsp;</p>
         </div>
+    </div>
+    <div class="row text-center">
+        <iframe width="480" height="360" src="https://www.youtube.com/embed/ED1AJTZJuck?rel=0" frameborder="0" allowfullscreen></iframe>
     </div>
     <div class="row">
         <div class="col-sm-8 col-lg-offset-1">
