general cleanup and bug fixing delete local people if they are deleted from the remote tree

--- a/website/parentsguide.html
+++ b/website/parentsguide.html
@@ -128,6 +128,11 @@
                 and engaging experience with their heritage.
             </p>
             <p>
+                <a href="https://familysearch.org/learningcenter/lesson/how-to-add-photos-to-your-family-tree/1187" target="_blank">
+                    Learn how to add photos to your FamilySearch Family Tree
+                </a>
+            </p>
+            <p>
                 Data from your online family tree is loaded in the background over WiFi while your
                 child plays.  As more data is loaded, more of your child's unique heritage is
                 available for them to engage with and learn about.
