more bug fixing with simple trees

--- a/website/index.html
+++ b/website/index.html
@@ -91,8 +91,12 @@
                     </p>
                     <p>
                         <a href="https://play.google.com/store/apps/details?id=com.yellowforktech.littlefamilytree">
-                            <img alt="Android app on Google Play"
+                            <img alt="Android app on Google Play" width="172"
                                  src="https://developer.android.com/images/brand/en_app_rgb_wo_60.png" />
+                        </a>
+                        <a href="http://www.amazon.com/gp/product/M1O1FB42K12UE1/ref=mas_pm_little_family_tree">
+                            <img alt="Android app on Amazon App Store" width="172"
+                                 src="amazon-underground-app-us-black.png" />
                         </a>
                     </p>
                 </div>
