--- a/website/index.html
+++ b/website/index.html
@@ -53,9 +53,11 @@
                 <li>
                     <a class="page-scroll" href="#page-top">Home</a>
                 </li>
+                <!--
                 <li>
                     <a class="page-scroll" href="#video">Video</a>
                 </li>
+                -->
                 <li>
                     <a class="page-scroll" href="parentsguide.html">Parent's Guide</a>
                 </li>
@@ -133,7 +135,7 @@
         </div>
     </div>
 </header>
-
+<!--
 <section class="bg-primary" id="video">
     <a href="#page-top" class="page-scroll to-top" title="back to top"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span></a>
     <div class="container">
@@ -142,15 +144,16 @@
                 <h2 class="section-heading">Video 1</h2>
                 <img src="growing_plant7.png" />
             </div>
-            <!--
+
             <div class="col-md-6 text-center">
                 <h2 class="section-heading">Video 2</h2>
                 <img src="growing_plant7.png" />
             </div>
-            -->
+
         </div>
     </div>
 </section>
+-->
 
 <section id="games">
     <a href="#page-top" class="page-scroll to-top" title="back to top"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span></a>
@@ -159,7 +162,7 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">Games!</h2>
                 <hr class="primary">
-                <p>Learn about the different games included in Little Family Tree.<br />Read the <a href="parentsguide.html">Parent's Guide</a> for more information about how adults can make the games more fun.</p>
+                <p>Learn about the different games included in Little Family Tree.</p>
                 <p>&nbsp;</p>
             </div>
         </div>
@@ -217,6 +220,13 @@
                     <img src="game_icons/tree_search.png" id="treespy" class="img-responsive" alt="">
                     <div class="game-box">
                         Tree, I Spy
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-6 outer-game-box" id="parentsguide-box">
+                <a href="#" class="portfolio-box">
+                    <div class="game-box">
+                        Parent's Guide
                     </div>
                 </a>
             </div>
